package net.elanglet.poc.batch.model;

public record ApiData(String key, String value) {}
