package net.elanglet.poc.batch.model;

public record Item(long id, String payload) {}
